# connector-telephony

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml0  .travis.yml  README.md  __init__.py  __openerp__.py  oca_dependencies.txt  partner_sms_send_view.xml  requirements.txt  serveraction.py  serveraction_view.xml  smsclient.py  smsclient_view.xml  smstemplate_view.xml  test-requirements.txt
asterisk_click2dial/: README.rst  __init__.py  __manifest__.py  __openerp__.py  __terp__.py  asterisk_click2dial.py  asterisk_click2dial_demo.xml  asterisk_server_view.xml  controller.py  requirements.txt  res_partner_view.xml  res_users_view.xml  web_asterisk_click2dial.xml
asterisk_click2dial_crm/: __init__.py  __openerp__.py  __terp__.py  asterisk_click2dial_crm.py  crm_lead_view.xml  crm_phonecall_view.xml  open_calling_partner_view.xml  res_partner_address.py  res_partner_view.xml  res_users_view.xml
asterisk_click2dial_crm_claim/: __init__.py  __openerp__.py  asterisk_click2dial_crm_claim.py  crm_claim_view.xml
asterisk_click2dial_event/: __init__.py  __openerp__.py  asterisk_click2dial_registration.py  registration_view.xml
asterisk_click2dial_registration/: __init__.py  __openerp__.py  asterisk_click2dial_registration.py  registration_view.xml
asterisk_logcall/: README.rst  __openerp__.py
asterisk_popup/: __init__.py  __openerp__.py  popup.py  res_users_view.xml
base_fax/: __init__.py  __openerp__.py
base_phone/: README.rst  __init__.py  __manifest__.py  __openerp__.py  (+9 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1057 files in other folders)
