[project]
name = "odoo-addons-oca-connector-telephony"
version = "17.0.20240518.0"
dependencies = [
    "odoo-addon-asterisk_click2dial>=17.0dev,<17.1dev",
    "odoo-addon-base_phone>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
